# dvault

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docvault-PRD.md
src/: add.rs  branch.rs  cat.rs  changes.rs  checkout.rs  commit.rs  compare.rs  config.rs  config_cmd.rs  db.rs  diff.rs  export.rs  graph.rs  handoff.rs  identity.rs  init.rs  lock.rs  log.rs  main.rs  merge.rs  refs.rs  remove.rs  report.rs  revparse.rs  serve.rs  show.rs  stats.rs  status.rs  store.rs  switch.rs  tag.rs  vault.rs
src/extract/: docx.rs  mod.rs
