[package]
name = "dvault"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
hex = "0.4.3"
quick-xml = "0.40.1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
similar = { version = "3.1.1", features = ["inline"] }
toml = "1.1.2"
uuid = { version = "1.23.3", features = ["v4"] }
whoami = "2.1.2"
zip = "8.6.0"
